--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "axios": "^1.12.2",
     "better-sqlite3": "^12.3.0",
-    "express": "^5.1.0"
+    "cli-progress": "^3.12.0",
+    "express": "^5.1.0",
+    "node-cron": "^4.2.1",
+    "sqlite3": "^5.1.7",
+    "stream-json": "^1.9.1"
   }
 }
