--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "axios": "^1.12.2",
     "better-sqlite3": "^12.3.0",
     "cli-progress": "^3.12.0",
+    "csv-parser": "^3.2.0",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "sqlite3": "^5.1.7",
     "stream-json": "^1.9.1"
