--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/Witherflare/powernine.dev#readme",
   "dependencies": {
     "axios": "^1.12.2",
+    "basic-auth": "^2.0.1",
     "better-sqlite3": "^12.3.0",
     "cli-progress": "^3.12.0",
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "playwright": "^1.55.1",
     "sqlite3": "^5.1.7",
     "stream-json": "^1.9.1"
   }
